# drifter

./: .gitignore  AGENTS.md  README.md  package-lock.json  package.json
backend/: pyproject.toml
backend/src/: main.py  server.py
backend/src/agents/: chat.py  idea_mapper.py  pool.py
backend/src/database/: models.py  vector_store.py
backend/src/router/: llm.py
backend/src/utils/: notifications.py  reports.py
electron/: config.ts  main.ts  package.json  pet-window.ts  preload.ts  tsconfig.json
frontend/: index.html  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.json  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/assets/sprites/: CloudCharacter.tsx  DragonCharacter.tsx  FoxCharacter.tsx  GhostCharacter.tsx  JellyCharacter.tsx  RobotCharacter.tsx
frontend/src/components/: CapturePanel.tsx  OfficeLayout.tsx  Onboarding.tsx  PetWindow.tsx
frontend/src/pages/: CapturePage.tsx  CompletedPage.tsx  IdeaMapPage.tsx  MemoryPage.tsx  ProjectsPage.tsx
frontend/src/platform/: index.ts
frontend/src/styles/: globals.css  index.ts
