[project]
name = "drifter-backend"
version = "0.1.0"
description = "Drifter AI agent backend — FastAPI server with SQLite + LanceDB"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "websockets>=14.0",
    "aiosqlite>=0.20.0",
    "pydantic>=2.10.0",
    "pyyaml>=6.0",
    "openai>=1.55.0",
    "anthropic>=0.39.0",
    "httpx>=0.27.0",
    "watchdog>=6.0.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "python-multipart>=0.0.17",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "responses>=0.25.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
